--- a/cccSite/requirements.txt
+++ b/cccSite/requirements.txt
@@ -7,6 +7,7 @@ django-address==0.2.8
 google-auth==2.23.3
 googlemaps==4.10.0
 idna==3.4 
+mysqlclient==2.2.5
 Pillow==10.1.0
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
